# query

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_MultiAgent_v3.md  CLAUDE_MultiAgent_v6.md  Dockerfile  PROJECT_README.md  clean_docker.bat  clean_docker.ps1  code-review-checklist.md  docker-compose.yml  project-documentation.md  pyproject.toml  待修改.txt
.claude/: settings.local.json
app/: config.py  exceptions.py  main.py  mcp_client.py  mcp_server.py  mcp_tools.py  prompt_manager.py  prompts.yaml  stream_consumer.py
app/api/: ingestion.py  qa.py
app/core/: agent_context.py  agent_memory.py  agent_orchestrator.py  agent_registry.py  document_processor.py  llm_factory.py  log_config.py  prompts.yaml  rag_engine.py  redis_store.py  tools.py  utils.py  vector_store.py  workflow_validator.py
docs/: system_overview.md
java/: CLAUDE.md  Dockerfile  docker-compose.yml  pom.xml
python/: pyproject.toml
python/app/: config.py
python/app/api/: qa.py
python/app/core/: document_processor.py  rag_engine.py  vector_store.py
python/app/models/: schemas.py
sql/: init.sql
tests/: conftest.py  eval_runner.py  test_agent_context.py  test_agent_memory_unit.py  test_agent_registry.py  test_analysis_agent.py  test_answer_generator.py  test_capability.py  test_critic_agent.py  test_extract_json.py  test_extraction_agent.py  test_orchestrator_integration.py  test_preference.py  test_preference_reassign.py  test_preference_v2.py  test_rag_engine_parsers.py  test_reflection.py  test_retrieval_agent.py  test_retry_handler.py  test_workflow_validator.py
(+137 files in other folders)
