[project]
name = "ai-rag-service"
version = "0.1.0"
description = "Python AI service for RAG-based enterprise document Q&A"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-huggingface>=0.1",
    "chromadb>=0.6",
    "pypdf>=5",
    "python-docx>=1.1",
    "docx2txt>=0.9",
    "python-multipart>=0.0",
    "pydantic-settings>=2.7",
    "aiohttp>=3.11",
    # LangChain integrations
    "langchain-chroma>=0.2",
    "langchain-openai>=0.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
